--- a/KromosomY/index.html
+++ b/KromosomY/index.html
@@ -28,8 +28,8 @@
 
     <div class="navbar-nav">
       <a href="#home">Home</a>
-      <a href="#about">Tentang Kami</a>
-      <a href="#menu">Menu</a>
+      <a href="#about">About</a>
+      <a href="#menu">Member</a>
       <a href="#products">Produk</a>
       <a href="#contact">Kontak</a>
     </div>
@@ -131,9 +131,9 @@
         </h3>
       </div>
       <div class="menu-card">
-        <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-        <h3 class="menu-card-title">- Latte -</h3>
-        <p class="menu-card-price">IDR 20K</p>
+        <img src="img/menu/44.jpg" alt="Espresso" class="menu-card-img">
+        <h2 class="menu-card-title">- Igun -</h2>
+        <h3 class="menu-card-price">IDR 20K</h3>
       </div>
       <div class="menu-card">
         <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
