--- a/KromosomY/index.html
+++ b/KromosomY/index.html
@@ -33,49 +33,6 @@
       <a href="#products">Produk</a>
       <a href="#contact">Kontak</a>
     </div>
-
-    <div class="navbar-extra">
-      <a href="#" id="search-button"><i data-feather="search"></i></a>
-      <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
-      <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
-    </div>
-
-    <!-- Search Form start -->
-    <div class="search-form">
-      <input type="search" id="search-box" placeholder="search here...">
-      <label for="search-box"><i data-feather="search"></i></label>
-    </div>
-    <!-- Search Form end -->
-
-    <!-- Shopping Cart start -->
-    <div class="shopping-cart">
-      <div class="cart-item">
-        <img src="img/products/1.jpg" alt="Product 1">
-        <div class="item-detail">
-          <h3>Product 1</h3>
-          <div class="item-price">IDR 30K</div>
-        </div>
-        <i data-feather="trash-2" class="remove-item"></i>
-      </div>
-      <div class="cart-item">
-        <img src="img/products/1.jpg" alt="Product 1">
-        <div class="item-detail">
-          <h3>Product 1</h3>
-          <div class="item-price">IDR 30K</div>
-        </div>
-        <i data-feather="trash-2" class="remove-item"></i>
-      </div>
-      <div class="cart-item">
-        <img src="img/products/1.jpg" alt="Product 1">
-        <div class="item-detail">
-          <h3>Product 1</h3>
-          <div class="item-price">IDR 30K</div>
-        </div>
-        <i data-feather="trash-2" class="remove-item"></i>
-      </div>
-    </div>
-    <!-- Shopping Cart end -->
-
   </nav>
   <!-- Navbar end -->
 
@@ -83,7 +40,7 @@
   <section class="hero" id="home">
     <div class="mask-container">
       <main class="content">
-        <h1>Episode<span>12</span></h1>
+        <h1>Episode <span>12</span></h1>
         <b><p>Waktu tidak bisa di putar, di jilat apalagi di celupin</p></b>
       </main>
     </div>
@@ -131,24 +88,30 @@
         </h3>
       </div>
       <div class="menu-card">
-        <img src="img/menu/44.jpg" alt="Espresso" class="menu-card-img">
+        <img src="img/menu/444.jpg" alt="Espresso" class="menu-card-img">
+        <h2 class="menu-card-title">- Erik -</h2>
+        <h3 class="menu-card-price">Ini orang tau segalanya kalo udah ngomong pasti bener dan juga dia ini google map
+           berjalan, kalo lu tanya nama jalan dia pasti tau dan bakal nganterlu sampe tujuan
+        </h3>
+      </div>
+      <div class="menu-card">
+        <img src="img/menu/55.jpg" alt="Espresso" class="menu-card-img">
         <h2 class="menu-card-title">- Igun -</h2>
-        <h3 class="menu-card-price">IDR 20K</h3>
+        <h3 class="menu-card-price">skill serius tingkah misterius dibalik tingkahnya yang agak lain dia punya kemampuan di level lain. website ini juga dia yang bikin</h3>
       </div>
       <div class="menu-card">
-        <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-        <h3 class="menu-card-title">- Espresso -</h3>
-        <p class="menu-card-price">IDR 15K</p>
+        <img src="img/menu/666.jpg" alt="Espresso" class="menu-card-img">
+        <h2 class="menu-card-title">- Lintang -</h2>
+        <h3 class="menu-card-price">nah ini nih orang yang bilang "gw ga belajar" tapi punya nilai yang ga wajar tinggi banget. emang rada kurang ajar
+          tapi kalo soal belajar dia yang paling bisa di percaya.
+        </h3>
       </div>
       <div class="menu-card">
-        <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-        <h3 class="menu-card-title">- Espresso -</h3>
-        <p class="menu-card-price">IDR 15K</p>
-      </div>
-      <div class="menu-card">
-        <img src="img/menu/1.jpg" alt="Espresso" class="menu-card-img">
-        <h3 class="menu-card-title">- Espresso -</h3>
-        <p class="menu-card-price">IDR 15K</p>
+        <img src="img/menu/777.jpg" alt="Espresso" class="menu-card-img">
+        <h2 class="menu-card-title">- Moses -</h2>
+        <h3 class="menu-card-price">Dawgh ini orang ensiklopedia berjalan dia tau banyak hal salah satu nya di bidang musik dia mungkin bisa tau suara kentut lu itu ada di nada apa.
+
+        </h3>
       </div>
     </div>
   </section>
@@ -156,8 +119,8 @@
 
   <!-- Products Section start -->
   <section class="products" id="products">
-    <h2><span>Produk Unggulan</span> Kami</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo unde eum, ab fuga possimus iste.</p>
+    <h2><span>Foto</span> Kenangan</h2>
+    <p>Berikut ini momen momen kenangan kita di ADUDU.</p>
 
     <div class="row">
       <div class="product-card">
@@ -232,7 +195,7 @@
 
     <div class="row">
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126748.56347862248!2d107.57311709235512!3d-6.903444341687889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e6398252477f%3A0x146a1f93d3e815b2!2sBandung%2C%20Bandung%20City%2C%20West%20Java!5e0!3m2!1sen!2sid!4v1672408575523!5m2!1sen!2sid"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3967.061207611984!2d106.72018757369857!3d-6.122464760032024!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f7f76181d553%3A0x1474c3a502f8ff4f!2sSMA%20YADIKA%202!5e0!3m2!1sid!2sid!4v1748511841292!5m2!1sid!2sid"
         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
 
       <form action="">
@@ -271,7 +234,7 @@
     </div>
 
     <div class="credit">
-      <p>Created by <a href="">sandhikagalih</a>. | &copy; 2023.</p>
+      <p>Created by <a href="">IgunG</a>. | &copy; 2025.</p>
     </div>
   </footer>
   <!-- Footer end -->
