--- a/KromosomY/index.html
+++ b/KromosomY/index.html
@@ -18,6 +18,8 @@
 
   <!-- My Style -->
   <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
 
 <body>
@@ -30,7 +32,7 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#menu">Member</a>
-      <a href="#products">Produk</a>
+      <a href="#products">kenangan</a>
       <a href="#contact">Kontak</a>
     </div>
   </nav>
@@ -125,64 +127,45 @@
     <div class="row">
       <div class="product-card">
         <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+          <a href="page1.html" class="item-detail-button"><i data-feather="eye"></i></a>
         </div>
         <div class="product-image">
-          <img src="img/products/1.jpg" alt="Product 1">
+          <img src="img/products/menu.jpg" alt="Product 1">
         </div>
         <div class="product-content">
-          <h3>Coffee Beans 1</h3>
-          <div class="product-stars">
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star"></i>
-          </div>
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+          <h3>Mancing bandeng</h3>
+          <div class="product-price">"dapet sekilo"</div>
         </div>
       </div>
+
       <div class="product-card">
         <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+          <a href="page2.html" class="item-detail-button"><i data-feather="eye"></i></a>
         </div>
         <div class="product-image">
-          <img src="img/products/1.jpg" alt="Product 1">
+          <img src="img/bukber/bg.jpg" alt="Product 1">
         </div>
         <div class="product-content">
-          <h3>Coffee Beans 1</h3>
-          <div class="product-stars">
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
+          <h3>bukber di rumah tiwi</h3>
           </div>
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+          <div class="product-price">"malam malam party"</div>
         </div>
       </div>
+
       <div class="product-card">
         <div class="product-icons">
-          <a href="#"><i data-feather="shopping-cart"></i></a>
-          <a href="#" class="item-detail-button"><i data-feather="eye"></i></a>
+          <a href="page3.html" class="item-detail-button"><i data-feather="eye"></i></a>
         </div>
         <div class="product-image">
-          <img src="img/products/1.jpg" alt="Product 1">
+          <img src="img/senbud/bg.jpg" alt="Product 1">
         </div>
         <div class="product-content">
-          <h3>Coffee Beans 1</h3>
-          <div class="product-stars">
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-            <i data-feather="star"></i>
-          </div>
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
+          <h3>praktek nari</h3>
+          <div class="product-price">"senbud"</div>
         </div>
       </div>
+
+     
     </div>
   </section>
   <!-- Products Section end -->
@@ -239,30 +222,7 @@
   </footer>
   <!-- Footer end -->
 
-  <!-- Modal Box Item Detail start -->
-  <div class="modal" id="item-detail-modal">
-    <div class="modal-container">
-      <a href="#" class="close-icon"><i data-feather="x"></i></a>
-      <div class="modal-content">
-        <img src="img/products/1.jpg" alt="Product 1">
-        <div class="product-content">
-          <h3>Product 1</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, tenetur cupiditate facilis obcaecati
-            ullam maiores minima quos perspiciatis similique itaque, esse rerum eius repellendus voluptatibus!</p>
-          <div class="product-stars">
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star" class="star-full"></i>
-            <i data-feather="star"></i>
-          </div>
-          <div class="product-price">IDR 30K <span>IDR 55K</span></div>
-          <a href="#"><i data-feather="shopping-cart"></i> <span>add to cart</span></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Modal Box Item Detail end -->
+  
 
   <!-- Feather Icons -->
   <script>
