--- a/KromosomY/index.html
+++ b/KromosomY/index.html
@@ -60,9 +60,10 @@
       <div class="content">
         <h3>Kita adalah mahluk langka di ADUDU(A2.2)</h3>
         <p>Waktu tidak terasa mengalir begitu saja siapa sangka kita bisa bersama sama namun tidak akan selamanya.</p>
-        <p>Awalnya kelas ini seperti kutukan karena yang memiliki kromosom Y(cowok) cuman 4, kelas mati karena kurang interaksi
-          setiap lomba bagaikan penyiksaan karena kekurangan member namun kita tetap berjuang sampai akhir. namun tidak ada yang abadi
-          meskipun kita punya jalan masing masing kenangan ini akan terus tersimpan di hati 
+        <p>Awalnya kelas ini seperti kutukan karena yang memiliki kromosom Y(cowok) cuman 4,tapi muncul secercah harapan karena nambah 3 orang lagi, mungkin yang bikin kelas baru sadar dari kecubung tapi tetep aja kelas mati karena kurang interaksi.
+          setiap lomba bagaikan penyiksaan karena kekurangan member namun kita tetap berjuang sampai akhir. 
+          disisi lain kita solid pada akhirnya kelas kembali hidup dan masa SMA jadi lebih berwarna namun tidak ada yang abadi setelah lulus
+          kita punya jalan masing masing tapi kenangan ini akan terus tersimpan di hati 
         </p>
       </div>
     </div>
