--- a/KromosomY/index.html
+++ b/KromosomY/index.html
@@ -106,7 +106,7 @@
         <img src="img/menu/666.jpg" alt="Espresso" class="menu-card-img">
         <h2 class="menu-card-title">- Lintang -</h2>
         <h3 class="menu-card-price">nah ini nih orang yang bilang "gw ga belajar" tapi punya nilai yang ga wajar tinggi banget. emang rada kurang ajar
-          tapi kalo soal belajar dia yang paling bisa di percaya.
+          tapi kalo soal belajar dan masalah nyontek pasti lancar.
         </h3>
       </div>
       <div class="menu-card">
